--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>Face Recognition App - Brandon Endres</title>
+	<meta
+      name="description"
+      content="A Facial Recognition Application built by Brandon Endres"
+    />
+	<title>Face Recognition App</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
