Revert "Adds new favicon, updated dependency"

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,11 +3,8 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<meta
-      name="description"
-      content="A Facial Recognition Application built by Brandon Endres"
-    />
-	<title>Face Recognition App</title>
+
+	<title>Face Recognition App - Brandon Endres</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
